--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Status Requisitos alumnos 4+1</h1>
+    <h1>Estatus Requisitos alumnos 4+1</h1>
     <input type="text" id="idInput" placeholder="Ingresa el ID">
     <button onclick="buscarID()" style="margin-top:3%; margin-bottom:3%;">Buscar</button>
 
