--- a/index.html
+++ b/index.html
@@ -95,12 +95,24 @@
             background-color: #f0f0f0; /* Color de fondo */
             border-radius: 5px; /* Bordes redondeados */
         }
-        p.little{
+        lu{
         	font-size:1vw;
-            margin:1px;
             }
-        li{
-        	font-size:1vw;
+        ol{
+            font-size:1vw;
+            }
+        p.info{
+            font-size:2vw;
+            color:red;
+            }
+            a{
+            color:green;
+            }
+            p.small{
+            font-size:1vw;
+            }
+            b{
+            color:red;
             }
     </style>
 </head>
@@ -198,11 +210,25 @@
         }
 
     </script>
-            <p class="little">Esta información es puramente INFORMATIVA.</p>
-            <p class="little">Si tienes dudas puedes contactar a:</p>
-            <li>Inglés: <a href="mailto:mcastillo@up.edu.mx">Mtro. Mario Castillo</a>
-            <li>EPA: <a href="mailto:escuela-practica@up.edu.mx">Escuela Práctica</a>
-            <li>Sercivio Social: <a href="mailto:ssocialup@up.edu.mx"> Servicio Social </a>
+    <center>
+<p class="small">Este contenido es de caracter <b>INFORMATIVO</b>. Si necesitas alcaraciones deberás referirte al siguiente directorio:</p>
+            <p class="info">DIRECTORIO DE ÁREAS RESPONSABLES</p>
+
+<ol>Inglés
+	<lu>Ing. Emilio Flores(<a>efburkle@up.edu.mx</a>)</lu>
+	<lu>Mail directo de CLUP: Mtro. Mario Castillo (<a>mcastill@up.edu.mx</a>)</lu>
+</ol>
+
+<ol>Servicio Social
+	<lu>Ing. Mariana Villanueva(<a>mvillanu@up.edu.mx</a>)</lu>
+	<lu>Mail directo de Compromiso Social(<a>ssocialup@up.edu.mx</a>)</lu>
+</ol>
+
+<ol>Escuela Práctica Avanzada
+	<lu>Ing. Brenda Navarro(<a>bnavarro@up.edu.mx</a>)</li>
+    <lu>Escuela Práctica(<a>escuela-practica@up.edu.mx</a>)</li>
+</ol>
+</center>
             
 
 </body>
