--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             p.small{
             font-size:1vw;
             }
-            b{
+            b.redd{
             color:red;
             }
     </style>
@@ -211,20 +211,20 @@
 
     </script>
     <center>
-<p class="small">Este contenido es de caracter <b>INFORMATIVO</b>. Si necesitas alcaraciones deberás referirte al siguiente directorio:</p>
+<p class="small">Este contenido es de caracter <b class="redd">INFORMATIVO</b>. Si necesitas alcaraciones deberás referirte al siguiente directorio:</p>
             <p class="info">DIRECTORIO DE ÁREAS RESPONSABLES</p>
 
-<ol>Inglés
+<ol><b>Inglés</b>
 	<lu>Ing. Emilio Flores(<a>efburkle@up.edu.mx</a>)</lu>
 	<lu>Mail directo de CLUP: Mtro. Mario Castillo (<a>mcastill@up.edu.mx</a>)</lu>
 </ol>
 
-<ol>Servicio Social
+<ol><b>Servicio Social</b>
 	<lu>Ing. Mariana Villanueva(<a>mvillanu@up.edu.mx</a>)</lu>
 	<lu>Mail directo de Compromiso Social(<a>ssocialup@up.edu.mx</a>)</lu>
 </ol>
 
-<ol>Escuela Práctica Avanzada
+<ol><b>Escuela Práctica Avanzada</b>
 	<lu>Ing. Brenda Navarro(<a>bnavarro@up.edu.mx</a>)</li>
     <lu>Escuela Práctica(<a>escuela-practica@up.edu.mx</a>)</li>
 </ol>
