--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
             p.small{
             font-size:1vw;
             }
-            b.redd{
+            b{
             color:red;
+            }
+            span{
+            font-size:3vw;
+            font-weight: bold;
             }
     </style>
 </head>
@@ -211,20 +215,20 @@
 
     </script>
     <center>
-<p class="small">Este contenido es de caracter <b class="redd">INFORMATIVO</b>. Si necesitas alcaraciones deberás referirte al siguiente directorio:</p>
+<p class="small">Este contenido es de caracter <b>INFORMATIVO</b>. Si necesitas alcaraciones deberás referirte al siguiente directorio:</p>
             <p class="info">DIRECTORIO DE ÁREAS RESPONSABLES</p>
 
-<ol><b>Inglés</b>
+<ol>Inglés
 	<lu>Ing. Emilio Flores(<a>efburkle@up.edu.mx</a>)</lu>
 	<lu>Mail directo de CLUP: Mtro. Mario Castillo (<a>mcastill@up.edu.mx</a>)</lu>
 </ol>
 
-<ol><b>Servicio Social</b>
+<ol>Servicio Social
 	<lu>Ing. Mariana Villanueva(<a>mvillanu@up.edu.mx</a>)</lu>
 	<lu>Mail directo de Compromiso Social(<a>ssocialup@up.edu.mx</a>)</lu>
 </ol>
 
-<ol><b>Escuela Práctica Avanzada</b>
+<ol>Escuela Práctica Avanzada
 	<lu>Ing. Brenda Navarro(<a>bnavarro@up.edu.mx</a>)</li>
     <lu>Escuela Práctica(<a>escuela-practica@up.edu.mx</a>)</li>
 </ol>
