--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <body>
 	<div class="img-UP">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fblog.hardpeach.com%2Fasi-ha-sido-la-evolucion-del-logo-de-apple-desde-1976%2F&psig=AOvVaw2zyqJfdXmCaz7KykrVHx2e&ust=1739560555150000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJi_mpquwYsDFQAAAAAdAAAAABAQ" alt="Apple Logo">
+        <img src="https://raw.githubusercontent.com/Iankli/StatusUPPOS/refs/heads/main/LogoPos-10.png" alt="Posgrados de Ingeniería">
     </div>
 
     <h1>Status Requisitos alumnos 4+1</h1>
