--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             font-weight: bold;
             }
     footer {
-    		font-size:8px;
+    		font-size:1.5vw;
             background-color: #f0f0f0;
             padding: 20px;
             text-align: center;
