UPDate Botton scale

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
     <h1>Status Requisitos alumnos 4+1</h1>
     <input type="text" id="idInput" placeholder="Ingresa el ID">
-    <button onclick="buscarID()" style="margin-top:3%; margin-bottom:3%;">Buscar</button>
+    <button onclick="buscarID()" style="margin-top:3%; margin-bottom:3%; width: 60%; max-width: 300px;">Buscar</button>
 
     <div id="infoColumnas"></div>
     <div id="resultado"></div>
