--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     </script>
 <footer>
         <div class="footer-content">
-        <p style="color:red;">Este status es INFORMATIVO. Si tienes dudas o crees que hay un error, te sugiero buscar directo al responsable de cada tema:</p>
+        <p style="color:red;"><b>Este status es INFORMATIVO. Si tienes dudas o crees que hay un error, te sugiero buscar directo al responsable de cada tema:</b></p>
             <table>
                 <thead>
                     <tr>
