--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Estatus Alumnos 4+1</title>
+    <title>Status Alumnos 4+1</title>
     <style>
         /* Estilos generales */
         body {
